# FBLoggerUtility

./: .gitignore  CMakeLists.txt  FBLoggerUtility.sln
FBLoggerUtility/: DirectoryReaderUtility.h  FBLoggerDataReader.cpp  FBLoggerDataReader.h  FBLoggerLogFile.cpp  FBLoggerLogFile.h  FBLoggerUtility.cpp  FBLoggerUtility.h  FBLoggerUtility.rc  FBLoggerUtility.vcxproj  FBLoggerUtility.vcxproj.filters  FBLoggerUtilityDlg.cpp  FBLoggerUtilityDlg.h  FileNameUtility.h  GPSFile.cpp  GPSFile.h  LoggerDataReader.cpp  LoggerDataReader.h  ProgressBarDlg.cpp  ProgressBarDlg.h  ReadMe.txt  StringUtility.h  air.cpp  config.csv  convertVelocity.cpp  convertVelocity.h  fluid.cpp  resource.h  stdafx.cpp  stdafx.h
FBLoggerUtility/res/: FBLoggerUtility.rc2
include/: common_logger_constants.h  directory_reader_utility.h  fluid.h  gps_file.h  logger_data_reader.h  logger_data_worker.h
src/: air.cpp  air.h  convert_velocity.cpp  convert_velocity.h  fb_logger_log_file.cpp  fluid.cpp  gps_file.cpp  legacy_logger_data_reader.cpp  legacy_logger_data_reader.h  logger_data_reader.cpp  logger_data_reader.h  logger_data_reader_ascii.cpp  main.cpp  main_compare.cpp  my_custom_events.h  string_utility.h
src/gui/: logger_data_worker.cpp  logger_data_worker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
wind_tunnel_data/: 3D_validation_data_20241106.txt  TG201811071345.txt  TG202411061143.txt
